force-app/main/default/objects/Knowledge__kav/fields/CaseSubject__c.field-meta.xml
<CustomField>
    <fullName>CaseSubject__c</fullName>
    <description>Set the default text for the Subject field on a new ticket. If you leave it blank, the Subject field uses the title of the current article</description>
    <inlineHelpText>You can leave the Case Subject field blank and it will default to the current article title.</inlineHelpText>
    <label>Case Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>