force-app/main/default/objects/Knowledge__kav/recordTypes/HR_Benefits.recordType-meta.xml
<RecordType>
    <fullName>HR_Benefits</fullName>
    <active>true</active>
    <description>HR Service Center benefits articles</description>
    <label>HR - Benefits</label>
</RecordType>