force-app/main/default/objects/Knowledge__kav/recordTypes/HR_Employee_Relations.recordType-meta.xml
<RecordType>
    <fullName>HR_Employee_Relations</fullName>
    <active>true</active>
    <description>HR Service Center employee relations articles</description>
    <label>HR - Employee Relations</label>
</RecordType>