force-app/main/default/objects/Knowledge__kav/recordTypes/HR_General.recordType-meta.xml
<RecordType>
    <fullName>HR_General</fullName>
    <active>true</active>
    <description>General HR Service Center articles</description>
    <label>HR - General</label>
</RecordType>