force-app/main/default/objects/Knowledge__kav/recordTypes/HR_Leave.recordType-meta.xml
<RecordType>
    <fullName>HR_Leave</fullName>
    <active>true</active>
    <description>HR Service Center leave articles</description>
    <label>HR - Leave</label>
</RecordType>