force-app/main/default/objects/Knowledge__kav/recordTypes/HR_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>HR_Onboarding</fullName>
    <active>true</active>
    <description>HR Service Center onboarding articles</description>
    <label>HR - Onboarding</label>
</RecordType>