force-app/main/default/objects/Knowledge__kav/recordTypes/HR_Payroll.recordType-meta.xml
<RecordType>
    <fullName>HR_Payroll</fullName>
    <active>true</active>
    <description>HR Service Center payroll articles</description>
    <label>HR - Payroll</label>
</RecordType>