force-app/main/default/objects/Knowledge__kav/recordTypes/IT_Knowledge_Article.recordType-meta.xml
<RecordType>
    <fullName>IT_Knowledge_Article</fullName>
    <active>true</active>
    <description>Create a knowledge article for information technology content, such as equipment, access, or application performance solutions</description>
    <label>IT Knowledge Article</label>
</RecordType>